fixed word and number spacing

--- a/src/app/main/dashboard/cards/quarter-goals-card/quarter-goals-card.component.scss
+++ b/src/app/main/dashboard/cards/quarter-goals-card/quarter-goals-card.component.scss
@@ -4,17 +4,16 @@
     font-family: Montserrat;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-  }
+    }
 
   .quarter-goals-card {
     box-shadow: 0px 4px 4px #D3E1DA;
     border-radius: 10px;
     width: 265px;
-    height: 310px;
+    height: 330px;
     display: flex; 
     flex-direction: column;
-    //justify-content: space-between;
+    padding: 14px 19px 26px 27px;
 
     .title {
       font-weight: 600;
@@ -28,11 +27,14 @@
       font-size: 18px;
       line-height: 22px;
       color: #2dbdb1;
+      margin-top: 5px;
     }
 
     .nums-and-tasks {
       display: flex;
       flex-direction: row;
+      border: 1px solid;
+      //margin-top: 5px;
 
       .numbers {
         display: flex;
@@ -42,54 +44,54 @@
         font-size: 36px;
         line-height: 44px;
         color: #2dbdb1;
+        margin: 12px 0px 25px 0px;
 
         .first {
           width: 30px;
           height: 25px;
           align-items: center;
-          border: 1px solid;
         }
 
         .second {
           width: 30px;
           height: 25px;
           align-items: center;
-          border: 1px solid;
+          margin-bottom: 20px;
         }
 
         .third {
           width: 30px;
           height: 25px;
           align-items: center;
-          border: 1px solid;
         }
       }
 
       .tasks {
         display: flex;
         flex-direction: column;
-        //align-items: space-between;
         font-weight: 500;
         font-size: 16px;
         line-height: 20px;
         color: #5a5a5a;
+        margin-top: 20px;
+
 
         .task1 {
           width: 175px;
           height: 25px;
-          border: 1px solid;
+          margin-left: 10px;
         }
 
         .task2 {
           width: 175px;
           height: 50px;
-          border: 1px solid;
+          margin: 20px 0px 0px 10px;
         }
 
         .task3 {
           width: 175px;
           height: 50px;
-          border: 1px solid;
+          margin: 20px 0px 0px 10px;
         }
       }
     }
@@ -97,5 +99,6 @@
     svg {
       width: 25px;
       height: 25px;
+      margin-right: ;  
     }
   }
